--- a/index.html
+++ b/index.html
@@ -1,7 +1,20 @@
 <!DOCTYPE html>
 <html>
-    <body>
-        <h1>Kitty McTophat Website</h1>
-        <p>"Wow, it's so good!" -You, probably</p>
-    </body>
+    <!-- TODO: Add meta tags -->
+    <link rel="stylesheet" href="./grid.css">
 </html>
+
+    <body>
+    <header>
+        <h1>Kitty McTophat Website</h1>
+    </header>
+    <nav>Navbar</nav>
+    <main>
+        <h2>A statement on the quality of this website</h2>
+        <blockquote>
+            "Wow, it's so good!"<br>
+            -You, probably
+        </blockquote>
+    </main>
+    <footer>Footer</footer>
+    </body>
