Add color to the website

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
     <!-- TODO: Add meta tags -->
+    <!-- <link rel="stylesheet" href="./purples.css"> -->
+    <link rel="stylesheet" href="./defaultColors.css">
+    <link rel="stylesheet" href="./colors.css">
     <link rel="stylesheet" href="./grid.css">
 </html>
 
