Implement Basic Navbar Structure

--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
     <header>
         <h1>Kitty McTophat Website</h1>
     </header>
-    <nav>Navbar</nav>
+    <nav>
+        <a class="active">Test 1</a>
+        <a>Test 2</a>
+        <a>Test 3</a>
+        <a>Test 4</a>
+    </nav>
     <main>
         <h2>A statement on the quality of this website</h2>
         <blockquote>
