Add copyright notice to footer

--- a/index.html
+++ b/index.html
@@ -24,5 +24,5 @@
             -You, probably
         </blockquote>
     </main>
-    <footer>Footer</footer>
+    <footer>&copy; 2024 - Kathryn "Kitty" McTophat - All Rights Reserved.</footer>
 </body>
