Shorten Website Title

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <header>
-        <h1>Kitty McTophat Website</h1>
+        <h1>Kitty McTophat</h1>
     </header>
     <nav>
         <a class="active">Test 1</a>
