Add Smol Yuri to the bottom of the nav bar

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
         <a>Test 2</a>
         <a>Test 3</a>
         <a>Test 4</a>
+        <!-- Spacer -->
+        <div style="flex-grow: 1;"></div>
+        <!-- TODO: Squeaky sound effect on click -->
+        <img id="SmolYuriImg" style="image-rendering: pixelated;" src="./images/SmolYuri.png" alt="Smol Yuri">
     </nav>
     <main>
         <h2>A statement on the quality of this website</h2>
