Move stylesheets to `styles` directory

--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
     <!-- TODO: Add meta tags -->
     <!-- <link rel="stylesheet" href="./purples.css"> -->
-    <link rel="stylesheet" href="./defaultColors.css">
-    <link rel="stylesheet" href="./colors.css">
-    <link rel="stylesheet" href="./grid.css">
+    <link rel="stylesheet" href="./styles/defaultColors.css">
+    <link rel="stylesheet" href="./styles/colors.css">
+    <link rel="stylesheet" href="./styles/grid.css">
 </html>
 
 <body>
