--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
     <!-- TODO: Add meta tags -->
+    <title>Kitty McTophat</title>
+    <link rel="icon" type="image/x-icon" href="./images/SmolYuri.png">
+
     <!-- <link rel="stylesheet" href="./purples.css"> -->
     <link rel="stylesheet" href="./styles/defaultColors.css">
     <link rel="stylesheet" href="./styles/colors.css">
