Add a label above Smol Yuri

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <!-- Spacer -->
         <div style="flex-grow: 1;"></div>
         <!-- TODO: Squeaky sound effect on click -->
+        <small style="text-align: center;">\/ Smol Yuri \/</small>
         <img id="SmolYuriImg" style="image-rendering: pixelated;" src="./images/SmolYuri.png" alt="Smol Yuri">
     </nav>
     <main>
