--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="./styles/defaultColors.css">
     <link rel="stylesheet" href="./styles/colors.css">
     <link rel="stylesheet" href="./styles/grid.css">
+
+    <link rel="stylesheet" href="./styles/nav.css">
 </html>
 
 <body>
