Add functionality to the nav bar

--- a/index.html
+++ b/index.html
@@ -11,29 +11,25 @@
 
     <link rel="stylesheet" href="./styles/nav.css">
     <link rel="stylesheet" href="./styles/footer.css">
+
+    <!-- jQuery -->
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"
+        integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
+        crossorigin="anonymous"></script>
+    <script src="./scripts/loadContent.js"></script>
 </html>
 
 <body>
     <header>
-        <h1>Kitty McTophat</h1>
+        <h1>Kitty McTophat - <span id="pageName"></span></h1>
     </header>
     <nav>
-        <a class="active">Test 1</a>
-        <a>Test 2</a>
-        <a>Test 3</a>
-        <a>Test 4</a>
         <!-- Spacer -->
         <div style="flex-grow: 1;"></div>
         <!-- TODO: Squeaky sound effect on click -->
         <small style="text-align: center;">\/ Smol Yuri \/</small>
         <img id="SmolYuriImg" style="image-rendering: pixelated;" src="./images/SmolYuri.png" alt="Smol Yuri">
     </nav>
-    <main>
-        <h2>A statement on the quality of this website</h2>
-        <blockquote>
-            "Wow, it's so good!"<br>
-            -You, probably
-        </blockquote>
-    </main>
+    <main>THIS IS PLACEHOLDER TEXT, IF YOU SEE IT THEN THE WEBISTE ISN'T DONE LOADING YET</main>
     <footer>&copy; 2024 - Kathryn "Kitty" McTophat - All Rights Reserved.</footer>
 </body>
