Improve placeholder text in `about.html` and `games.html`

--- a/pages/games.html
+++ b/pages/games.html
@@ -1,1 +1,12 @@
-games.html
+<h2>I make video games</h2>
+<p>
+    Do you like video games?<br>
+    Of course you do, who doesn't like video games?
+</p>
+<p>
+    Well, not to brag or anything, but I have been known to make video games<br>
+    I know, I know, hold your applause
+</p>
+<p>
+    This page is gonna contain a list of all my games once it's done, so be sure to come back then
+</p>
