--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>Kitty McTophat</title>
     <link rel="icon" type="image/x-icon" href="./images/SmolYuri.png">
 
-    <!-- <link rel="stylesheet" href="./purples.css"> -->
-    <link rel="stylesheet" href="./styles/defaultColors.css">
+    <!-- <link rel="stylesheet" href="./styles/purples.css"> -->
+    <link rel="stylesheet" href="./styles/redAndBlack.css">
     <link rel="stylesheet" href="./styles/colors.css">
     <link rel="stylesheet" href="./styles/grid.css">
 
