--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <!-- Spacer -->
         <div style="flex-grow: 1;"></div>
         <!-- TODO: Squeaky sound effect on click -->
-        <small style="text-align: center;">\/ Smol Yuri \/</small>
+        <small id="SmolYuriLabel" style="text-align: center;">\/ Smol Yuri \/</small>
         <img id="SmolYuriImg" style="image-rendering: pixelated;" src="./images/SmolYuri.png" alt="Smol Yuri">
     </nav>
     <main>THIS IS PLACEHOLDER TEXT, IF YOU SEE IT THEN THE WEBISTE ISN'T DONE LOADING YET</main>
