--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <link rel="icon" type="image/x-icon" href="./images/SmolYuri.png">
 
     <!-- <link rel="stylesheet" href="./styles/purples.css"> -->
-    <link rel="stylesheet" href="./styles/redAndBlack.css">
+    <!-- <link rel="stylesheet" href="./styles/redAndBlack.css"> -->
+    <link rel="stylesheet" href="./styles/purpleAndBlack.css">
     <link rel="stylesheet" href="./styles/colors.css">
     <link rel="stylesheet" href="./styles/grid.css">
 
