--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"
         integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
         crossorigin="anonymous"></script>
+
+    <script src="./scripts/easterEggs.js"></script>
     <script src="./scripts/loadContent.js"></script>
 </html>
 
