--- a/index.html
+++ b/index.html
@@ -4,10 +4,8 @@
     <title>Kitty McTophat</title>
     <link rel="icon" type="image/x-icon" href="./images/SmolYuri.png">
 
-    <!-- <link rel="stylesheet" href="./styles/purples.css"> -->
-    <!-- <link rel="stylesheet" href="./styles/redAndBlack.css"> -->
-    <link rel="stylesheet" href="./styles/purpleAndBlack.css">
     <link rel="stylesheet" href="./styles/colors.css">
+    <link rel="stylesheet" href="./styles/colorRules.css">
     <link rel="stylesheet" href="./styles/grid.css">
 
     <link rel="stylesheet" href="./styles/nav.css">
