--- a/index.html
+++ b/index.html
@@ -1,36 +1,40 @@
 <!DOCTYPE html>
 <html>
-    <!-- TODO: Add meta tags -->
-    <title>Kitty McTophat</title>
-    <link rel="icon" type="image/x-icon" href="./images/SmolYuri.png">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="description" content="The official website of Kathryn 'Kitty' McTophat">
+        <meta name="keywords" content="HTML, CSS, JavaScript, Video Games, Game Development, Art, Illustration">
+        <meta name="author" content="Kathryn 'Kitty' McTophat">
 
-    <link rel="stylesheet" href="./styles/colors.css">
-    <link rel="stylesheet" href="./styles/colorRules.css">
-    <link rel="stylesheet" href="./styles/grid.css">
+        <title>Kitty McTophat</title>
+        <link rel="icon" type="image/x-icon" href="./images/SmolYuri.png">
 
-    <link rel="stylesheet" href="./styles/nav.css">
-    <link rel="stylesheet" href="./styles/footer.css">
+        <link rel="stylesheet" href="./styles/colors.css">
+        <link rel="stylesheet" href="./styles/colorRules.css">
+        <link rel="stylesheet" href="./styles/grid.css">
 
-    <!-- jQuery -->
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"
-        integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
-        crossorigin="anonymous"></script>
+        <link rel="stylesheet" href="./styles/nav.css">
+        <link rel="stylesheet" href="./styles/footer.css">
 
-    <script src="./scripts/easterEggs.js"></script>
-    <script src="./scripts/loadContent.js"></script>
+        <script src="https://code.jquery.com/jquery-3.7.1.min.js"
+            integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
+            crossorigin="anonymous"></script>
+        <script src="./scripts/easterEggs.js"></script>
+        <script src="./scripts/loadContent.js"></script>
+    </head>
+
+    <body>
+        <header>
+            <h1>Kitty McTophat - <span id="pageName"></span></h1>
+        </header>
+        <nav>
+            <!-- Spacer -->
+            <div style="flex-grow: 1;"></div>
+
+            <small id="SmolYuriLabel" style="text-align: center;">\/ Smol Yuri \/</small>
+            <img id="SmolYuriImg" style="image-rendering: pixelated;" src="./images/SmolYuri.png" alt="Smol Yuri">
+        </nav>
+        <main>THIS IS PLACEHOLDER TEXT, IF YOU SEE IT THEN THE WEBISTE ISN'T DONE LOADING YET</main>
+        <footer>&copy; 2024 - Kathryn "Kitty" McTophat - All Rights Reserved.</footer>
+    </body>
 </html>
-
-<body>
-    <header>
-        <h1>Kitty McTophat - <span id="pageName"></span></h1>
-    </header>
-    <nav>
-        <!-- Spacer -->
-        <div style="flex-grow: 1;"></div>
-
-        <small id="SmolYuriLabel" style="text-align: center;">\/ Smol Yuri \/</small>
-        <img id="SmolYuriImg" style="image-rendering: pixelated;" src="./images/SmolYuri.png" alt="Smol Yuri">
-    </nav>
-    <main>THIS IS PLACEHOLDER TEXT, IF YOU SEE IT THEN THE WEBISTE ISN'T DONE LOADING YET</main>
-    <footer>&copy; 2024 - Kathryn "Kitty" McTophat - All Rights Reserved.</footer>
-</body>
