Rework Page Title Loading No longer require pages to be on the navbar to have a title

--- a/pages/about.html
+++ b/pages/about.html
@@ -1,3 +1,5 @@
+<meta class="pageTitle" content="About">
+
 <h2>A statement on the quality of this website</h2>
 <blockquote>
     "Wow, it's so good!"<br>
