--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <link rel="stylesheet" href="./styles/nav.css">
         <link rel="stylesheet" href="./styles/footer.css">
 
+        <link rel="stylesheet" href="./styles/images.css">
         <script src="https://code.jquery.com/jquery-3.7.1.min.js"
             integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
             crossorigin="anonymous"></script>
@@ -32,7 +33,7 @@
             <div style="flex-grow: 1;"></div>
 
             <small id="SmolYuriLabel" style="text-align: center;">\/ Smol Yuri \/</small>
-            <img id="SmolYuriImg" style="image-rendering: pixelated;" src="./images/SmolYuri.png" alt="Smol Yuri">
+            <img id="SmolYuriImg" class="nearestNeighbor" src="./images/smolYuri.png" alt="Smol Yuri" onclick="squeak()">
         </nav>
         <main>THIS IS PLACEHOLDER TEXT, IF YOU SEE IT THEN THE WEBISTE ISN'T DONE LOADING YET</main>
         <footer>&copy; 2025 - Kathryn "Kitty" McTophat - All Rights Reserved.</footer>
