--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <link rel="stylesheet" href="./styles/colorRules.css">
         <link rel="stylesheet" href="./styles/grid.css">
 
+        <link rel="stylesheet" href="./styles/header.css">
         <link rel="stylesheet" href="./styles/nav.css">
         <link rel="stylesheet" href="./styles/footer.css">
 
