Finish About page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
         <link rel="stylesheet" href="./styles/nav.css">
         <link rel="stylesheet" href="./styles/footer.css">
 
+        <link rel="stylesheet" href="./styles/floats.css">
         <link rel="stylesheet" href="./styles/images.css">
+        <link rel="stylesheet" href="./styles/links.css">
+
         <script src="https://code.jquery.com/jquery-3.7.1.min.js"
             integrity="sha512-v2CJ7UaYy4JwqLDIrZUI/4hqeoQieOmAZNXBeQyjo21dadnwR+8ZaIJVT8EE2iyI61OV8e6M8PP2/4hpQINQ/g=="
             crossorigin="anonymous"></script>
