--- a/pages/about.html
+++ b/pages/about.html
@@ -1,7 +1,67 @@
 <meta class="pageTitle" content="About">
 
-<h2>A statement on the quality of this website</h2>
-<blockquote>
-    "Wow, it's so good!"<br>
-    -You, probably
-</blockquote>
+<div class="floatRight">
+    <img class="nearestNeighbor" src="./../images/gayCat.png" width="256px" onclick="squeak()">
+    <p>
+        psst... click the cat ^<br>
+        it's fun, i promise
+    </p>
+</div>
+
+<p>
+    You're probably wondering why there's a gay cat on your screen, and why she's a marketable plushie.
+    The answer is, it's a long story.
+</p>
+<p>
+    Instead of telling that story though, I'm just gonna write myself a chracter bio.
+    Maybe one day I'll reveal my emotionally scarring backstory, but that day is not today.
+</p>
+<p>
+    <b>Kathryn "Kitty" McTophat</b><br>
+    Birthday: December 9th ♐<br>
+    Favorite color: Purple<br>
+    Favorite dinosaur: Stegosaurus<br>
+    Favorite episode of <i>My Little Pony: Friendship is Magic</i>: S2E04, "Luna Eclipsed"<br>
+    Favorite number: &pi;<br>
+    Favorite integer: 6<br>
+    Likes: girls, drawing, video games, programming, cooking, bl&aring;haj, webcomics about lesbians, trains, snow<br>
+    Dislikes: February, cars, being called a furry, cars again
+</p>
+
+<div class="floatClear"></div>
+<br>
+
+<p>
+    Anyway, here's all my links in case you wanna find me somewhere else
+</p>
+
+<div class="socialLinks">
+    <a href="https://youtube.com/@Kitty_McTophat">
+        <img src="./../images/logos/youTubeLogo.svg" height="48px" alt="YouTube Logo">
+    </a>
+    &ThickSpace;
+    <a href="https://www.reddit.com/user/Kitty_McTophat">
+        <img src="./../images/logos/redditLogo.svg" height="48px" alt="Reddit Logo">
+    </a>
+    &ThickSpace;
+    <a href="https://bsky.app/profile/kittymctophat.bsky.social">
+        <img src="./../images/logos/blueSkyLogo.svg" height="48px" alt="BlueSky Logo">
+    </a>
+    &ThickSpace;
+    <a href="https://steamcommunity.com/id/kittymctophat/">
+        <img src="./../images/logos/steamLogo.svg" height="48px" alt="Steam Logo">
+    </a>
+    &ThickSpace;
+    <a href="https://github.com/KittyMcTophat">
+        <img src="./../images/logos/gitHubLogo.svg" height="48px" alt="GitHub Logo">
+    </a>
+    &ThickSpace;
+    <a href="https://kitty-mctophat.itch.io/">
+        <img src="./../images/logos/itchioLogo.svg" height="48px" alt="Itch.io Logo">
+    </a>
+    &ThickSpace;
+    <a href="https://retroachievements.org/user/KittyMcTophat">
+        <img src="./../images/logos/retroAchievementsLogo.webp" height="48px" alt="RetroAchievements Logo">
+    </a>
+</div>
+
